2004-02-01  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/callgraph_container.cpp: get correct source filenname liner
	* libpp/format_output.cpp: re-factorize a bit by moving anon
	  namespace from format_output:: to ::

2004-02-01  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/oprofile.xml:
	* doc/opstack.1.in: document new options

	* libpp/callgraph_container.h:
	* libpp/callgraph_container.cpp: improve readability, add linenr
	  debug information recording partially, see TODO

	* libpp/format_output.h: s/formatter/opreport_formatter, define
	  cg_formatter
	* libpp/format_output.cpp: implement cg_formatter, factorize some code
	  in formatter base class

	* pp/opreport.cpp: s/formatter/opreport_formatter
	* pp/opstack_options.h:
	* pp/opstack_options.cpp: implement output selection/formatting options
	* pp/opstack.cpp: use cg_formatter for output.

2004-01-30  Philippe Elie  <phil.el@wanadoo.fr>

	commit not itended but tree is stable so add a ChangeLog ...
	* libpp/Makefile.am:
	* libpp/symbol.cpp: new file for output_hint()
	* libpp/profile_container.cpp: use output_hint()
	* libpp/callgraph_container.cpp:
	* libpp/callgraph_container.h:
	* libpp/symbol.h:
	* pp/opstack.cpp: get output hint from the callgraph container.

2004-01-29  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/init.c:
	* daemon/opd_events.c:
	* daemon/opd_kernel.c:
	* daemon/opd_mangling.c:
	* daemon/opd_printf.h:
	* daemon/opd_sfile.c:
	* daemon/opd_trans.c:
	* daemon/oprofiled.c:
	* daemon/oprofiled.h:
	* daemon/liblegacy/init.c:
	* daemon/liblegacy/opd_image.c:
	* daemon/liblegacy/opd_kernel.c:
	* daemon/liblegacy/opd_mapping.c:
	* daemon/liblegacy/opd_parse_proc.c:
	* daemon/liblegacy/opd_proc.c:
	* daemon/liblegacy/opd_sample_files.c:
	* utils/opcontrol: split daemon --verbose, w/o argument it's synonymous
	  to --verbose=all. Better splitting is welcome

	* daemon/opd_sfile.c: Fix thinko, opcontrol --reset coredump'ed

2004-01-29  Philippe Elie  <phil.el@wanadoo.fr>
