@@ -1,5 +1,12 @@
 2004-02-01  Philippe Elie  <phil.el@wanadoo.fr>
 
+	* libpp/callgraph_container.h:
+	* libpp/callgraph_container.cpp: rewrite populate() and ehance
+	  caller_callee_recorder to support multiple profile classes.
+	* pp/opstack_options.cpp: accept multiple profile class
+
+2004-02-01  Philippe Elie  <phil.el@wanadoo.fr>
+
 	* libpp/callgraph_container.cpp: get correct source filenname liner
 	* libpp/format_output.cpp: re-factorize a bit by moving anon
 	  namespace from format_output:: to ::
